force-app/main/default/objects/TR1__Closing_Report__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>TEXT(TR1__Job__r.Brand__c)</formula>
    <label>Brand</label>
    <type>Text</type>
</CustomField>