force-app/main/default/objects/TR1__Closing_Report__c/fields/External_ID_True__c.field-meta.xml
<CustomField>
    <fullName>External_ID_True__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>65</length>
    <type>Text</type>
</CustomField>