force-app/main/default/objects/TR1__Closing_Report__c/fields/PO_Required__c.field-meta.xml
<CustomField>
    <fullName>PO_Required__c</fullName>
    <formula>INCLUDES(TR1__Account__r.Purchase_Order_Required__c, &quot;Permanent&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Required</label>
    <type>Checkbox</type>
</CustomField>