force-app/main/default/objects/TR1__Closing_Report__c/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TR1__Purchase_Order__c.TR1__Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.TR1__Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>TR1__Purchase_Order__c.TR1__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TR1__Purchase_Order__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>