force-app/main/default/objects/TR1__Closing_Report__c/fields/School_Term__c.field-meta.xml
<CustomField>
    <fullName>School_Term__c</fullName>
    <label>School Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>School_Term</valueSetName>
    </valueSet>
</CustomField>