force-app/main/default/objects/TR1__Closing_Report__c/fields/Sirenum_Placement__c.field-meta.xml
<CustomField>
    <fullName>Sirenum_Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sirenum Placement</label>
    <referenceTo>sirenum__Placement__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>