force-app/main/default/objects/TR1__Closing_Report__c/fields/TKC_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>TKC_Job_Name__c</fullName>
    <description>Used for indexing Closing reports to Textkernel.</description>
    <formula>TR1__Job__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Name</label>
    <type>Text</type>
</CustomField>