force-app/main/default/objects/TR1__Closing_Report__c/fields/TKC_Person_Placed_Name__c.field-meta.xml
<CustomField>
    <fullName>TKC_Person_Placed_Name__c</fullName>
    <formula>TR1__Person_Placed__r.FirstName &amp; &quot; &quot; &amp; TR1__Person_Placed__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Placed Name</label>
    <type>Text</type>
</CustomField>