force-app/main/default/objects/TR1__Closing_Report__c/recordTypes/Ad_Hoc.recordType-meta.xml
<RecordType>
    <fullName>Ad_Hoc</fullName>
    <active>true</active>
    <label>Ad-Hoc</label>
</RecordType>