force-app/main/default/objects/TR1__Closing_Report__c/recordTypes/Contract.recordType-meta.xml
<RecordType>
    <fullName>Contract</fullName>
    <active>false</active>
    <description>Set Start and End Dates</description>
    <label>Contract</label>
</RecordType>